Add temp smoothing config & general config screen improvements